--- a/Wardriver/project.properties
+++ b/Wardriver/project.properties
@@ -12,4 +12,5 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../android-support-v7-appcompat
+android.library.reference.1=..\\android-support-v7-appcompat
+android.library.reference.2=../../../Program Files (x86)/Android/sdk/extras/google/google_play_services/libproject/google-play-services_lib
