--- a/Wardriver/AndroidManifest.xml
+++ b/Wardriver/AndroidManifest.xml
@@ -20,6 +20,9 @@
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true"/>
+    
+    <uses-feature android:name="android.hardware.sensor.compass"
+                  android:required="true"/>
 
     <application
         android:allowBackup="true"
@@ -29,7 +32,8 @@
         android:hardwareAccelerated="true" >
         <activity
             android:name="com.inf8405.wardriver.Main"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
