--- a/Wardriver/AndroidManifest.xml
+++ b/Wardriver/AndroidManifest.xml
@@ -30,8 +30,9 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat.Light"
         android:hardwareAccelerated="true" >
+        
         <activity
-            android:name="com.inf8405.wardriver.Main"
+            android:name="com.inf8405.wardriver.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
@@ -39,6 +40,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity
+            android:name="com.inf8405.wardriver.SettingsActivity"
+            android:label="@string/menu_options"
+            android:screenOrientation="portrait" >
+        </activity>
+        
         <meta-data
 		    android:name="com.google.android.maps.v2.API_KEY"
 		    android:value="AIzaSyAsN3EZc3N9bAa-eQvz6x0WYHBVKKAvQck"/>
