--- a/Wardriver/AndroidManifest.xml
+++ b/Wardriver/AndroidManifest.xml
@@ -32,7 +32,7 @@
         android:hardwareAccelerated="true" >
         
         <activity
-            android:name="com.inf8405.wardriver.MainActivity"
+            android:name="MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
@@ -42,7 +42,7 @@
         </activity>
         
         <activity
-            android:name="com.inf8405.wardriver.SettingsActivity"
+            android:name="SettingsActivity"
             android:label="@string/menu_options"
             android:screenOrientation="portrait" >
         </activity>
