--- a/Wardriver/AndroidManifest.xml
+++ b/Wardriver/AndroidManifest.xml
@@ -16,12 +16,16 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.LOCATION_HARDWARE"/>
     
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true"/>
     
     <uses-feature android:name="android.hardware.sensor.compass"
+                  android:required="true"/>
+    
+    <uses-feature android:name="android.hardware.location.gps"
                   android:required="true"/>
 
     <application
